Add video games Kanban
It's a read-only embed of a Notion site

Signed-off-by: David Thompson <davidethompson@me.com>

--- a/config.toml
+++ b/config.toml
@@ -13,13 +13,23 @@ displayToggle = false
 [params.navbar]
 displayLogo = false
 
+[params.footer]
+enable = false
+
 [[menu.main]]
 name = "About"
 pageRef = "about"
+weight = 1
 
 [[menu.main]]
 name = "Blog"
 pageRef = "blog"
+weight = 1
+
+[[menu.main]]
+name = "Video Game Kanban"
+pageRef = "video-game-kanban"
+weight = 1
 
 [[menu.main]]
 name = "Blog RSS"
